modification pour tester la commande view